修改测试用例（移除文本块/var）并切换 JDK 21